--- a/build.gradle
+++ b/build.gradle
@@ -31,13 +31,12 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity5'
 	implementation 'org.springframework.boot:spring-boot-configuration-processor:3.2.0'
-    testImplementation 'org.projectlombok:lombok:1.18.28'
-	testImplementation 'org.projectlombok:lombok:1.18.28'
-	compileOnly 'org.projectlombok:lombok'
+	implementation 'org.modelmapper:modelmapper:2.4.2'
+	implementation 'org.projectlombok:lombok'
+	annotationProcessor 'org.projectlombok:lombok'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	runtimeOnly 'com.h2database:h2'
 	runtimeOnly 'com.mysql:mysql-connector-j'
-	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.security:spring-security-test'
 }
