--- a/build.gradle
+++ b/build.gradle
@@ -30,39 +30,45 @@ configurations {
 repositories {
 	mavenCentral()
 	gradlePluginPortal() // https://plugins.gradle.org/m2/
-	// 아임포트 관련
-	maven {url 'https://jitpack.io'}
+	maven {url 'https://jitpack.io'} // 아임포트 관련
 }
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-mail'
 	implementation 'org.springframework.boot:spring-boot-starter-security'
-	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
-	implementation 'com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.8.1'
-	implementation 'nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
-	implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity5'
 	implementation 'org.springframework.boot:spring-boot-configuration-processor:3.2.0'
+	// p6spy
+	implementation 'com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.8.1'
+	// modelmapper
 	implementation 'org.modelmapper:modelmapper:2.4.2'
+	// lombok
 	implementation 'org.projectlombok:lombok'
-	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	annotationProcessor 'org.projectlombok:lombok'
-	runtimeOnly 'com.h2database:h2'
-	runtimeOnly 'com.mysql:mysql-connector-j'
-	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-	testImplementation 'org.springframework.security:spring-security-test'
-
-	// (3) queryDSL 추가
+	// thymeleaf
+	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
+	implementation 'nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect'
+	implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity5'
+	// QueryDsl
 	implementation "com.querydsl:querydsl-jpa:${queryDslVersion}"
 	annotationProcessor "com.querydsl:querydsl-apt:${queryDslVersion}"
-
 	// npm
 	implementation "com.moowork.gradle:gradle-node-plugin:1.3.1"
-
 	// 아임포트 결제 api
-	implementation 'com.github.iamport:iamport-rest-client-java:0.2.21'
+	implementation "com.github.iamport:iamport-rest-client-java:0.2.21"
+	// OAuth2
+	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
+	// devtools
+	developmentOnly 'org.springframework.boot:spring-boot-devtools'
+	// h2
+	runtimeOnly 'com.h2database:h2'
+	// mysql
+	runtimeOnly 'com.mysql:mysql-connector-j'
+
+	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	testImplementation 'org.springframework.security:spring-security-test'
 }
 
 tasks.named('bootBuildImage') {
